# sqlalchemy-pydantic-field

./: .bumpversion.cfg  README.md  makefile  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
sqlalchemy_pydantic_field/: __init__.py  pydantic_field.py
tests/: conftest.py  test_model.py  test_model_list.py  test_search.py
