[tool.poetry]
name = "sqlalchemy-pydantic-field"
version = "0.1.0"
description = "Wrap sqlalchemy json field with pydantic models"
authors = ["Denis Kataev <denis.a.kataev+git@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/kataev/sqlalchemy-pydantic-field"
homepage = "https://pypi.org/project/sqlalchemy-pydantic-field"
keywords = []

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.3"
pydantic = "^1.1"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
bumpversion = "^0.5.3"
flake8-awesome = "^1.0"
mypy = "^0.740.0"
pylint = "^2.2"
pytest = "^3.0"
pytest-cov = "^2.6"
pytest-deadfixtures = "^2.1"
pytest-mock = "^1.10"
unify = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
